@startuml parisportif5
skinparam linetype ortho
'plantuml
'Relations :
    'Un utilisateur a un compte
    User "1" -- "1" Account
    'Une facture n'est pas pas forcément lié à un utilisateur existant
    User "0..1" <-- "0..*" Billing
    'Un paris a un type
    BetType "1" <-- "0..*" Bet
    'Un utilisateur a un porte-feuille
    User "1" -- "1" Wallet
    'Un utilisateur a une liste des paris en cours (validé)
    User "1" -- "1" OngoingBets
    'Un paris (validé) est lié à une liste de paris en cours
    Bet "0..*" --o "1" OngoingBets
    'Un type de paris est lié à un sport
    BetType "0..*" --> "1" Sport
    'Une compétition a des événements
    Competition "1" o-- "0..*" Event
    'La compétition a une équipe gagnante
    Competition "1" --> "0..1" Team
    'Un événement a plusieurs rencontre ou course
    Event "1" o-- "0..*" Run
    'Une rencontre ou une course a un lieu
    Run "1" -- "1" Location
    'Une équipe a des scores (des matchs, des courses)
    Team "1" o-- "0..*" Score
    'Une rencontre ou une course a plusieurs équipes
    Run "1" o--> "0..*" Team
    'Une équipe a plusieurs membre
    Team "1" *-- "1..*" Member
    'Un paris a un état (en cours ou passé)
    BetState "1" <-- "0..*" Bet
    'Une équipe a un résultat (gagnant, perdant) même dans le cas de sport individuel
    ResultType "0..1" <-- "0..*" Team
    'Un membre a un résultat dans le cas de sport individuel (gagnant, perdant)
    ResultType "0..1" <-- "0..*" Member
    'Un membre a un rôle (fonction) tel que pilote, joueur
    MemberRole "1" <-- "0..*" Member
    'Un membre a un status (blessé, titulaire)
    MemberStatus "1" <-- "0..*" Member
    'Liaison potentiel entre un paris et une compétition
    Bet "0..*" -- "0..1" Competition
    'Classe d'association entre paris et compétition
    (Bet, Competition) .. CompetitionBets
    'Liaison potentiel entre un paris et une rencontre ou course
    Bet "0..*" -- "0..1" Run
    'Classe d'association entre un paris et une rencontre ou course
    (Bet, Run) .. RunBets
    'Liaison potentiel entre un paris et une équipe
    Bet "0..*" -- "0..1" Team
    'Classe d'association entre un paris et une équipe
    (Bet, Team) .. TeamBets
    'Liaison potentiel entre un paris et un membre
    Bet "0..*" -- "0..1" Member
    'Classe d'association entre un paris et un membre
    (Bet, Member) .. MemberBets
'Définitions des classes :
    'Rôle du membre (pilote, co-pilote, joueur)
    class MemberRole {
        -identifier : int
        -name : string
    }
    'Statut du membre (blessé, remplaçant, titulaire)
    class MemberStatus {
        -identifier : int
        -name : string
    }
    'Type de résultat (gagnant, perdant, ex aequo)
    class ResultType {
        -identifier : int
        -name : string
    }
    'État du paris (en cours, validé, finis)
    class BetState {
        -identifier : int
        -name : string
        -description : string
    }
    'Porte-feuille de l'utilisateur avec des fonds (de l'argent gagnés)
    class Wallet {
        -identifier : int
        -amount : float
        +add(in float value) : void
        +subtract(in float value) : void
        +isEmpty() : bool
        +isAuthorizedSubtraction(in float value) : bool
    }
    'Liste qui contient les paris validés et en cours
    class OngoingBets {
        -identifier : int
        +isEmpty() : bool
        +getBetsCount() : int
    }
    'Compte (sert à ce connecter)
    class Account {
        -identifier : int
        -validation : bool
        -password : string
        -emailAddress : string
        -creationDate : DateTime
        -status : bool
        +isValidate() : bool
    }
    'Utilisateur avec un compte
    class User {
        -identifier : int
        -civility : string
        -firstName : string
        -lastName : string
        -billingAddress : string
        -billingPostCode : string
        -billingCountry : string
        -birthDate : DateTime
        +getName() : string
        +getAddress() : string
    }
    'Factures (type=débit ou crédit)
    class Billing {
        -identifier : int
        -firstName : string
        -lastName : string
        -billingAddress : string
        -billingPostCode : string
        -billingCountry : string
        -orderNumber  : int
        -amount : float
        -currency : string
        -type : int
        +getName() : string
        +getAddress() : string
        +deleteUser() : void
    }
    'Un paris
    class Bet {
        -identifier : int
        -amount : float
        -odds : float
        -betSubject : string
        +getOdds() : float
    }
    'Catégorie de paris (ex: Paris sur la victoire du favoris)
    class BetType {
        -identifier : int
        -name : string
        -description : string
    }
    'Lieu de la rencontre/course
    class Location {
        -identifier : int
        -place : string
        -timezone : DateTimeZone
        -country : string
    }
    'Sport pratiqué (runtype = fixture, race) (type = collectif ou individuel ou les deux)
    class Sport {
        -identifier : int
        -name : string
        -numberOfCompetitor : int
        -collectiveType : bool
        -individualType : bool
        -runType : string
        -country : string
        +isCollective() : bool
        +isIndividual() : bool
        +isBothIndividualAndCollective() : bool
    }
    'Compétition (JO, Ligue des Champions, F1 Championnat du monde)
    class Competition {
        -identifier : int
        -name : string
        -startDate : DateTime
        -endDate : DateTime
        -country : string
        +hasWinner() : bool
        +hasEvents() : bool
        +isBegin() : bool
        +getEventsCount() : int
    }
    'Événement de la compétition (poul de qualification, Circuit F1 de france)
    class Event {
        -identifier : int
        -name : string
        +hasRuns() : bool
        +getRunsCount() : int
    }
    'Un match, une rencontre, une course
    class Run {
        -identifier : int
        -name : string
        -startDate : DateTime
        -endDate : DateTime
        -result : Team|null
        +isBegin() : bool
        +hasTeams() : bool
        +hasResult() : bool
        +getTeamsCount() : int
    }
    'Score de l'équipe ou du membre de l'équipe
    class Score {
        -identifier : int
        -value : int
        -type : string
        +getScore() : int
    }
    'Joueur ou sportif ou pilote
    class Member {
        -identifier : int
        -lastName : string
        -firstName : string
        +hasResult() : bool
    }
    'Équipes qui participe à une rencontre, à une course
    class Team {
        -identifier : int
        -name : string
        +hasResult() : bool
        +hasMembers() : bool
        +hasScores() : bool
        +getMembersCount() : int
        +getScoresCount() : int
    }
@enduml
